<resources>
    <string name="app_name">ChallengeFlow</string>
    <string name="title_character_detail">Character Detail</string>
    <string name="character_image">Character image</string>
    <string name="name">Nombre: %1$s</string>
    <string name="status">Estado: %1$s</string>
    <string name="species">Especie: %1$s</string>
    <string name="gender">Género: %1$s</string>
    <string name="name_empty">Nombre: -</string>
    <string name="status_empty">Estado: -</string>
    <string name="species_empty">Especie: -</string>
    <string name="gender_empty">Género: -</string>
    <string name="error_detail">No se pudo obtener el personaje inicial</string>
</resources>